--- a/css/style.css
+++ b/css/style.css
@@ -6,18 +6,23 @@
 }
 
 html {
-  font-size: 100%;
+  font-size: 62.5%;
   margin: 0;
   padding: 0;
 
-  --big-header-height: 50px;
-  --big-comment-height: 135px;
-  --big-grid-gaps: 15px;
+  --header-height: 50px;
+  --comment-height: 135px;
+  --grid-gaps: 15px;
 
-  --medium-header-height: 40px;
-  --medium-game-height: 120px;
-  --medium-comment-height: 145px;
-  --medium-grid-gaps: 10px;
+}
+
+@media only screen and (max-width: 910px) {
+  html {
+    --header-height: 40px;
+    --game-height: 120px;
+    --comment-height: 145px;
+    --grid-gaps: 10px;
+  }
 }
 
 body {
@@ -35,43 +40,65 @@ body {
 
 #container {
   display: block;
+}
+
+#main {
+  display: grid;
+  grid-template-areas:
+    "header header"
+    "game board"
+    "comments comments";
+  grid-template-columns: 300px auto;
+  grid-template-rows:
+    var(--header-height)
+    minmax(auto, calc(100% 
+      - var(--header-height) 
+      - var(--comment-height) 
+      - 2 * var(--grid-gaps)))
+    minmax(var(--comment-height), auto);
+  grid-row-gap: var(--grid-gaps);
+  height: 100%;
   max-width: 1060px;
+
   margin: 0 auto;
 }
 
-@media only screen and (max-width: 960px) {
-  #container {
-    width: 100%;
-    height: 100%;
+@media only screen and (max-width: 910px) {
+  #main {
+    grid-template-areas:
+      "header"
+      "game"
+      "board"
+      "comments";
+    grid-template-columns: 100%;
+    grid-template-rows:
+      var(--header-height)
+      var(--game-height)
+      auto
+      var(--comment-height);
   }
 }
 
 #header {
+  grid-area: header;
+
   display: flex;
   flex-direction: row;
   align-items: center;
   width: 100%;
-  height: var(--big-header-height);
+  height: var(--header-height);
 
   background: #fff;
 
-  margin-bottom: var(--big-grid-gaps);
-  padding: 0 1.3rem;
+  padding: 0 22px;
   border-bottom: 2px solid #57B5FF;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
-}
-
-@media only screen and (max-width: 960px) {
-  #header {
-    height: var(--medium-header-height);
-    margin-bottom: var(--medium-grid-gaps);
-  }
 }
 
 #header #icon {
   flex-basis: 50%;
 
-  font-size: 2rem;
+  font-size: 3.2rem;
   line-height: 1;
 }
 
@@ -88,15 +115,15 @@ body {
 }
 
 #header #menu li {
-  font-size: 1.2rem;
-  padding: 0.2rem 2.7rem;
+  font-size: 2rem;
+  padding: 0 3em;
 
   text-decoration: underline;
 }
 
-@media only screen and (max-width: 960px) {
+@media only screen and (max-width: 910px) {
   #header #menu li {
-    padding: 0.2rem 2rem;
+    padding: 2em;
   }
 }
 
@@ -104,24 +131,8 @@ body {
   color: #57B5FF;
 }
 
-#main {
-  display: grid;
-  grid-template-columns: 2fr 5fr;
-  grid-template-rows:
-    calc(100% - var(--big-comment-height) - var(--big-grid-gaps)) 
-    var(--big-comment-height);
-  grid-row-gap: var(--big-grid-gaps);
-  height: calc(100vh - var(--big-header-height) - var(--big-grid-gaps));
-}
-
-@media only screen and (max-width: 960px) {
-  #main {
-    display: block;
-    height: calc(100% - var(--medium-header-height) - var(--medium-grid-gaps));
-  }
-}
-
 #game {
+  grid-area: game;
   position: relative;
 
   background-color: #fff;
@@ -133,24 +144,24 @@ body {
   z-index: 1;
 
   font-family: 'Tinos', serif;
-  font-size: 1.2rem;
+  font-size: 2rem;
   font-weight: 700;
-  line-height: 1.5rem;
+  line-height: 1.2em;
 
-  padding: 1rem;
+  padding: 0.8em;
   border-bottom: 2px solid #57B5FF;
   background-color: #fff;
 }
 
-@media only screen and (max-width: 960px) {
+@media only screen and (max-width: 910px) {
   #game {
-    height: var(--medium-game-height);
+    height: var(--game-height);
   }
 
   #game #title {
     height: 25%;
     text-align: center;
-    padding: 0.1rem;
+    padding: 0.1em;
   }
 
   #game #title br {
@@ -165,15 +176,15 @@ body {
   grid-template-columns: 14% 43% 43%;
   overflow: scroll;
 
-  font-size: 1.5rem;
+  font-size: 2.4rem;
   line-height: 1.5;
-  padding-top: 1rem;
+  padding-top: 0.6em;
 }
 
 #game #moves > div {
   position: relative;
   text-align: right;
-  padding: 0 0.8rem;
+  padding: 0 0.5em;
 }
 #game #moves > div:nth-child(3n+1) {
   padding: 0;
@@ -183,17 +194,17 @@ body {
   text-align: left;
 }
 
-@media only screen and (max-width: 960px) {
+@media only screen and (max-width: 910px) {
   #game #moves {
     width: 100%;
     height: 75%;
     grid-auto-flow: column;
-    grid-template-columns: repeat(auto-fill, 7rem);
-    grid-auto-columns: 7rem;
+    grid-template-columns: repeat(auto-fill, 5.6em);
+    grid-auto-columns: 5.6em;
     grid-template-rows: repeat(3, 1fr);
     justify-items: stretch;
 
-    font-size: 1.2rem;
+    font-size: 2rem;
 
     padding: 0;
     border-bottom: 2px solid #57B5FF;
@@ -212,7 +223,7 @@ body {
     z-index: 0;
 
     height: 100%;
-    width: 3rem;
+    width: 48px;
     top: 0;
 
     background: #fff;
@@ -245,24 +256,24 @@ body {
 }
 
 #game #moves > div:nth-child(3n+2) .comment-small {
-  left: 0.8rem;
+  left: 0.7em;
 }
 
 #game #moves > div:nth-child(3n) .comment-small {
-  right: 0.8rem;
+  right: 0.7em;
 }
 
-@media only screen and (max-width: 960px) {
+@media only screen and (max-width: 910px) {
   #game #moves .comment-small {
-    width: 1.1rem;
+    width: 0.9em;
   }
 
   #game #moves > div:nth-child(3n+2) .comment-small {
-    left: 0.4rem;
+    left: 0.2em;
   }
 
   #game #moves > div:nth-child(3n) .comment-small {
-    right: 0.4rem;
+    right: 0.2em;
   }
 }
 
@@ -285,14 +296,14 @@ body {
 }
 
 #game #moves > div:nth-child(3n+2) #sel-move {
-  right: 0.5rem;
+  right: 0.3em;
 }
 
 #game #moves > div:nth-child(3n) #sel-move {
-  left: 0.5rem;
+  left: 0.3em;
 }
 
-@media only screen and (max-width: 960px) {
+@media only screen and (max-width: 910px) {
   #game .sel-row {
     border-bottom: none;
     border-top: none;
@@ -302,31 +313,35 @@ body {
 
   #game #sel-move {
     right: 50% !important;
-    max-width: 8rem;
-    max-height: 2rem;
+    max-width: 6.4em;
+    max-height: 1.6em;
     object-fit: fill;
     transform: translateX(50%) translateY(-50%) scale(1.35, 1);
   }
 }
   
 #board {
-    display: grid;
-    grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: repeat(8, 1fr);
-    width: 100%;
-    margin: auto;
-    padding: 2rem;
+  grid-area: board;
+
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(8, 1fr);
+  width: 100%;
+
+  margin: auto;
+  padding: 3.2rem;
 }
 
-@media only screen and (max-width: 960px) {
+@media only screen and (max-width: 910px) {
   #board {
+    /* TODO: vw -> % */
     width: min(100vw, calc(100vh 
-      - var(--medium-header-height) 
-      - var(--medium-game-height)
-      - var(--medium-comment-height)
-      - var(--medium-grid-gaps) * 3
+      - var(--header-height) 
+      - var(--game-height)
+      - var(--comment-height)
+      - var(--grid-gaps) * 3
     ));
-    margin: var(--medium-grid-gaps) auto;
+    margin: var(--grid-gaps) auto;
   }
 }
 
@@ -360,7 +375,7 @@ body {
 .field p {
     position: absolute;
     margin: 0;
-    font-size: 2rem;
+    font-size: 3rem;
     line-height: 1;
     color: white;
 
@@ -377,29 +392,18 @@ body {
 }
 
 .field .left {
-    left: -0.2rem;
+    left: -3px;
     transform: translateX(-100%);
 }
 
 .field .right {
-    right: -0.2rem;
+    right: -3px;
     transform: translateX(100%);
 }
 
-#comment-section {
-  display: flex;
-  grid-column-start: 1;
-  grid-column-end: 3;
-}
-
-@media only screen and (max-width: 960px) {
-  #comment-section {
-    min-height: var(--medium-comment-height);
-    max-height: var(--medium-comment-height);
-  }
-}
-
 #comments {
+  grid-area: comments;
+
   display: flex;
   flex-direction: row;
   min-height: 0;
@@ -409,24 +413,33 @@ body {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
 }
 
+@media only screen and (max-width: 910px) {
+  #comments {
+    min-height: var(--comment-height);
+    max-height: var(--comment-height);
+    /* TODO: fix this with grid */
+  }
+}
+
 #comments #highlight {
   position: relative;
-  width: 6rem;
+  width: 100px;
   background-color: #8ACBFF;
   border-right: 2px solid #57b5FF;
 }
 #comments #highlight img {
   position: absolute;
-  top: 1rem;
+  top: 16px;
   left: 50%;
   transform: translateX(-50%);
 }
 
 #comments #text-section {
-  padding: 0.8rem;
   overflow: scroll;
   font-family: "Tinos", serif;
-  font-size: 1.25rem;
+  font-size: 2rem;
+
+  padding: 0.6em;
 }
 
 #comments .avatar {
