--- a/sass/index.scss
+++ b/sass/index.scss
@@ -26,14 +26,10 @@ body {
   color: black;
 }
 
-#container {
-  display: block;
-}
-
 #main {
   display: grid;
   grid-template-areas:
-    "header header"
+   "header header"
     "game board"
     "comments comments";
   grid-template-columns: 300px auto;
@@ -67,376 +63,7 @@ body {
   }
 }
 
-#header {
-  grid-area: header;
-
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-
-  background: white;
-
-  padding: 0 22px;
-  border-bottom: 2px solid $highlight_100;
-  box-shadow: 0 2px 4px $shadow;
-}
-
-#header #icon {
-  flex-basis: 50%;
-
-  font-size: 3.2rem;
-  line-height: 1;
-}
-
-#header #menu {
-  flex-basis: 50%;
-  justify-self: flex-end;
-
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-
-#header #menu li {
-  font-size: 2rem;
-  padding: 0 3em;
-
-  text-decoration: underline;
-}
-
-@media only screen and (max-width: $tablet-max-width) {
-  #header #menu li {
-    padding: 2em;
-  }
-}
-
-#header #menu li:hover {
-  color: $highlight_100;
-}
-
-#game {
-  grid-area: game;
-  position: relative;
-
-  background-color: white;
-  box-shadow: 0 2px 4px $shadow;
-}
-
-#game #title {
-  position: relative;
-  z-index: 1;
-  height: $desktop-game-title-height;
-
-  font-family: 'Tinos', serif;
-  font-size: 2rem;
-  font-weight: 700;
-  line-height: 1.2em;
-
-  padding: 0.8em;
-  border-bottom: 2px solid $highlight_100;
-  background-color: white;
-}
-
-@media only screen and (max-width: $tablet-max-width) {
-  #game {
-    height: $tablet-game-height;
-  }
-
-  #game #title {
-    height: 25%;
-    text-align: center;
-    padding: 0.1em;
-  }
-
-  #game #title br {
-    display: none;
-  }
-
-}
-
-#game #moves {
-  display: grid;
-  grid-auto-flow: row;
-  grid-template-columns: 14% 43% 43%;
-  overflow: scroll;
-  max-height: calc(100% - $desktop-game-title-height);
-
-  font-size: 2.4rem;
-  line-height: 1.5;
-  padding-top: 0.6em;
-}
-
-#game #moves > div {
-  position: relative;
-  text-align: right;
-  padding: 0 0.5em;
-}
-#game #moves > div:nth-child(3n+1) {
-  padding: 0;
-}
-
-#game #moves > div:nth-child(3n) {
-  text-align: left;
-}
-
-@media only screen and (max-width: $tablet-max-width) {
-  #game #moves {
-    width: 100%;
-    height: 75%;
-    max-height: 75%;
-    grid-auto-flow: column;
-    grid-template-columns: repeat(auto-fill, 5.6em);
-    grid-auto-columns: 5.6em;
-    grid-template-rows: repeat(3, 1fr);
-    justify-items: stretch;
-
-    font-size: 2rem;
-
-    padding: 0;
-    border-bottom: 2px solid $highlight_100;
-  }
-
-  #game #moves > div {
-    text-align: center;
-  }
-
-  #game #moves > div:nth-child(3n) {
-    text-align: center;
-  }
-
-  #game .move-gradient {
-    position: absolute;
-    z-index: 0;
-
-    height: 100%;
-    width: 48px;
-    top: 0;
-
-    background: white;
-    border-bottom: 2px solid $highlight_100;
-  }
-
-  #game #gradient-left {
-    left: 0;
-    background: linear-gradient(
-      90deg,
-      $game-gradient-from 0%,
-      $game-gradient-to 100%
-      );
-  }
-
-  #game #gradient-right {
-    right: 0;
-    background: linear-gradient(
-      90deg,
-      $game-gradient-to 0%,
-      $game-gradient-from 100%
-      );
-  }
-}
-
-#game #moves .comment-small {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-45%);
-}
-
-#game #moves > div:nth-child(3n+2) .comment-small {
-  left: 0.7em;
-}
-
-#game #moves > div:nth-child(3n) .comment-small {
-  right: 0.7em;
-}
-
-@media only screen and (max-width: $tablet-max-width) {
-  #game #moves .comment-small {
-    width: 0.9em;
-  }
-
-  #game #moves > div:nth-child(3n+2) .comment-small {
-    left: 0.2em;
-  }
-
-  #game #moves > div:nth-child(3n) .comment-small {
-    right: 0.2em;
-  }
-}
-
-#game .sel-row {
-  background-color: $highlight_40;
-  border-bottom: 1px solid $highlight_100;
-  border-top: 1px solid $highlight_100;
-}
-
-#game span {
-  position: relative;
-  z-index: 1;
-}
-
-#game #sel-move {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  z-index: 0;
-}
-
-#game #moves > div:nth-child(3n+2) #sel-move {
-  right: 0.3em;
-}
-
-#game #moves > div:nth-child(3n) #sel-move {
-  left: 0.3em;
-}
-
-@media only screen and (max-width: $tablet-max-width) {
-  #game .sel-row {
-    border-bottom: none;
-    border-top: none;
-    border-left: 1px solid $highlight_100;
-    border-right: 1px solid $highlight_100;
-  }
-
-  #game #sel-move {
-    right: 50% !important;
-    max-width: 6.4em;
-    max-height: 1.6em;
-    object-fit: fill;
-    transform: translateX(50%) translateY(-50%) scale(1.35, 1);
-  }
-}
-  
-#board {
-  grid-area: board;
-
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  grid-template-rows: repeat(8, 1fr);
-  width: 100%;
-
-  margin: auto;
-  padding: 3.2rem;
-}
-
-@media only screen and (max-width: $tablet-max-width) {
-  #board {
-    /* TODO: vw -> % */
-    width: min(100vw, calc(100vh 
-      - $tablet-header-height 
-      - $tablet-game-height
-      - $tablet-comment-height
-      - $tablet-grid-gaps * 3
-    ));
-    margin: $tablet-grid-gaps auto;
-  }
-}
-
-.field {
-    position: relative;
-    display: block;
-    padding: 50% 0;
-    background-color: $field_dark;
-}
-
-.light {
-    background-color: $field_light;
-}
-
-.field div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-
-.field img {
-    width: 95%;
-    height: 95%;
-}
-
-.field p {
-    position: absolute;
-    margin: 0;
-    font-size: 3rem;
-    line-height: 1;
-    color: white;
-
-    text-shadow: 1px 1px 2px $shadow;
-}
-.field .over {
-    top: 0;
-    transform: translateY(-100%);
-}
-
-.field .under {
-    bottom: 0;
-    transform: translateY(100%);
-}
-
-.field .left {
-    left: -3px;
-    transform: translateX(-100%);
-}
-
-.field .right {
-    right: -3px;
-    transform: translateX(100%);
-}
-
-#comments {
-  grid-area: comments;
-
-  display: flex;
-  flex-direction: row;
-  min-height: 0;
-  max-height: 100%;
-
-  background-color: #fff;
-  box-shadow: 0 2px 4px $shadow;
-}
-
-@media only screen and (max-width: $tablet-max-width) {
-  #comments {
-    min-height: $tablet-comment-height;
-    // max-height: var(--comment-height);
-    /* TODO: fix this with grid */
-  }
-}
-
-#comments #highlight {
-  position: relative;
-  width: 100px;
-  background-color: $highlight_60;
-  border-right: 2px solid $highlight_100;
-}
-#comments #highlight img {
-  position: absolute;
-  top: 16px;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-#comments #text-section {
-  overflow: scroll;
-  font-family: "Tinos", serif;
-  font-size: 2rem;
-
-  padding: 0.6em;
-}
-
-#comments .avatar {
-  vertical-align: text-bottom;
-}
-
-#comments .writer {
-  font-weight: 700;
-}
+@import 'header';
+@import 'game';
+@import 'board';
+@import 'comments';
