--- a/sass/_game.scss
+++ b/sass/_game.scss
@@ -1,41 +1,37 @@
 #game {
   grid-area: game;
-  position: relative;
 
   background-color: white;
   box-shadow: 0 2px 4px $shadow;
-}
 
-#game #title {
-  position: relative;
-  z-index: 1;
-  height: $desktop-game-title-height;
+  > #title {
+    height: $desktop-game-title-height;
 
-  font-family: 'Tinos', serif;
-  font-size: 2rem;
-  font-weight: 700;
-  line-height: 1.2em;
+    font-family: 'Tinos', serif;
+    font-size: 2rem;
+    font-weight: 700;
+    line-height: 1.2em;
 
-  padding: 0.8em;
-  border-bottom: 2px solid $highlight_100;
-  background-color: white;
+    padding: 0.8em;
+    border-bottom: 2px solid $highlight_100;
+    background-color: white;
+  }
 }
 
 @media only screen and (max-width: $tablet-max-width) {
   #game {
     height: $tablet-game-height;
-  }
 
-  #game #title {
-    height: 25%;
-    text-align: center;
-    padding: 0.1em;
-  }
+    > #title {
+      height: 25%;
+      text-align: center;
+      padding: 0.1em;
 
-  #game #title br {
-    display: none;
+      > br {
+        display: none;
+      }
+    }
   }
-
 }
 
 #game #moves {
@@ -48,144 +44,150 @@
   font-size: 2.4rem;
   line-height: 1.5;
   padding-top: 0.6em;
-}
 
-#game #moves > div {
-  position: relative;
-  text-align: right;
-  padding: 0 0.5em;
-}
-#game #moves > div:nth-child(3n+1) {
-  padding: 0;
-}
+  > div {
+    position: relative;
+    text-align: right;
+    padding: 0 0.5em;
 
-#game #moves > div:nth-child(3n) {
-  text-align: left;
+    > .comment-small {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-45%);
+    }
+
+    &:nth-child(3n+1) {
+      padding: 0;
+    }
+
+    &:nth-child(3n+2) {
+      .comment-small {
+        left: 0.7em;
+      }
+    }
+
+    &:nth-child(3n) {
+      text-align: left;
+
+      .comment-small {
+        right: 0.7em;
+      }
+    }
+  }
 }
 
 @media only screen and (max-width: $tablet-max-width) {
-  #game #moves {
-    width: 100%;
-    height: 75%;
-    max-height: 75%;
-    grid-auto-flow: column;
-    grid-template-columns: repeat(auto-fill, 5.6em);
-    grid-auto-columns: 5.6em;
-    grid-template-rows: repeat(3, 1fr);
-    justify-items: stretch;
+  #game {
+    position: relative;
 
-    font-size: 2rem;
+    > #title {
+      position: relative;
+      z-index: 1;
+    }
 
-    padding: 0;
-    border-bottom: 2px solid $highlight_100;
-  }
+    > #moves {
+      width: 100%;
+      height: 75%;
+      max-height: 75%;
+      grid-auto-flow: column;
+      grid-template-columns: repeat(auto-fill, 5.6em);
+      grid-auto-columns: 5.6em;
+      grid-template-rows: repeat(3, 1fr);
+      justify-items: stretch;
 
-  #game #moves > div {
-    text-align: center;
-  }
+      font-size: 2rem;
 
-  #game #moves > div:nth-child(3n) {
-    text-align: center;
-  }
+      padding: 0;
+      border-bottom: 2px solid $highlight_100;
 
-  #game .move-gradient {
-    position: absolute;
-    z-index: 0;
+      > div {
+        text-align: center !important;
 
-    height: 100%;
-    width: 48px;
-    top: 0;
+        > .comment-small {
+          width: 0.9em;
+        }
 
-    background: white;
-    border-bottom: 2px solid $highlight_100;
-  }
+        &:nth-child(3n+2) .comment-small {
+          left: 0.2em;
+        }
 
-  #game #gradient-left {
-    left: 0;
-    background: linear-gradient(
-      90deg,
-      $game-gradient-from 0%,
-      $game-gradient-to 100%
-      );
-  }
+        &:nth-child(3n) .comment-small {
+          right: 0.2em;
+        }
+      }
+    }
 
-  #game #gradient-right {
-    right: 0;
-    background: linear-gradient(
-      90deg,
-      $game-gradient-to 0%,
-      $game-gradient-from 100%
-      );
-  }
-}
+    // mobile gradients
+    > #gradient-left, #gradient-right {
+      position: absolute;
+      z-index: 0;
 
-#game #moves .comment-small {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-45%);
-}
+      height: 100%;
+      width: 48px;
+      top: 0;
 
-#game #moves > div:nth-child(3n+2) .comment-small {
-  left: 0.7em;
-}
+      border-top: 2px solid $highlight_100;
+      border-bottom: 2px solid $highlight_100;
+      background: linear-gradient(
+        90deg,
+        $game-gradient-from 0%,
+        $game-gradient-to 100%
+        );
+    }
 
-#game #moves > div:nth-child(3n) .comment-small {
-  right: 0.7em;
-}
+    > #gradient-left {
+      left: 0;
+    }
 
-@media only screen and (max-width: $tablet-max-width) {
-  #game #moves .comment-small {
-    width: 0.9em;
-  }
-
-  #game #moves > div:nth-child(3n+2) .comment-small {
-    left: 0.2em;
-  }
-
-  #game #moves > div:nth-child(3n) .comment-small {
-    right: 0.2em;
+    > #gradient-right {
+      right: 0;
+      transform: rotate(180deg);
+    }
   }
 }
 
-#game .sel-row {
+// --- selected move in game ---
+#game > #moves > .sel-row {
   background-color: $highlight_40;
   border-bottom: 1px solid $highlight_100;
   border-top: 1px solid $highlight_100;
+
+  > span {
+    position: relative;
+    z-index: 1;
+  }
+
+  > #sel-move {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 0;
+  }
 }
 
-#game span {
-  position: relative;
-  z-index: 1;
-}
+#game > #moves {
+  > div:nth-child(3n+2) #sel-move {
+    right: 0.3em;
+  }
 
-#game #sel-move {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  z-index: 0;
-}
-
-#game #moves > div:nth-child(3n+2) #sel-move {
-  right: 0.3em;
-}
-
-#game #moves > div:nth-child(3n) #sel-move {
-  left: 0.3em;
+  > div:nth-child(3n) #sel-move {
+    left: 0.3em;
+  }
 }
 
 @media only screen and (max-width: $tablet-max-width) {
-  #game .sel-row {
+  #game > #moves > .sel-row {
     border-bottom: none;
     border-top: none;
     border-left: 1px solid $highlight_100;
     border-right: 1px solid $highlight_100;
-  }
 
-  #game #sel-move {
-    right: 50% !important;
-    max-width: 6.4em;
-    max-height: 1.6em;
-    object-fit: fill;
-    transform: translateX(50%) translateY(-50%) scale(1.35, 1);
+    > #sel-move {
+      right: 50% !important;
+      max-width: 6.4em;
+      max-height: 1.6em;
+      object-fit: fill;
+      transform: translateX(50%) translateY(-50%) scale(1.35, 1);
+    }
   }
 }
