--- a/sass/_comments.scss
+++ b/sass/_comments.scss
@@ -9,6 +9,12 @@
   background-color: #fff;
   box-shadow: 0 2px 4px $shadow;
 
+  @include tablet-size {
+    min-height: $tablet-comment-height;
+    //max-height: $tablet-comment-height;
+    /* TODO: fix this with grid */
+  }
+
   > #highlight {
     position: relative;
     width: 100px;
@@ -39,12 +45,3 @@
     }
   }
 }
-
-@media only screen and (max-width: $tablet-max-width) {
-  #comments {
-    min-height: $tablet-comment-height;
-    //max-height: $tablet-comment-height;
-    /* TODO: fix this with grid */
-  }
-}
-
