--- a/sass/_game.scss
+++ b/sass/_game.scss
@@ -4,6 +4,11 @@
   background-color: white;
   box-shadow: 0 2px 4px $shadow;
 
+  @include tablet-size {
+    position: relative;
+    height: $tablet-game-height;
+  }
+
   > #title {
     height: $desktop-game-title-height;
 
@@ -15,21 +20,48 @@
     padding: 0.8em;
     border-bottom: 2px solid $highlight_100;
     background-color: white;
-  }
-}
 
-@media only screen and (max-width: $tablet-max-width) {
-  #game {
-    height: $tablet-game-height;
 
-    > #title {
+    @include tablet-size {
+      position: relative;
+      z-index: 1;
       height: 25%;
+
       text-align: center;
       padding: 0.1em;
 
       > br {
         display: none;
       }
+    }
+  }
+
+  @include tablet-size {
+    // mobile gradients
+    > #gradient-left, #gradient-right {
+      position: absolute;
+      z-index: 0;
+
+      height: 100%;
+      width: 48px;
+      top: 0;
+
+      border-top: 2px solid $highlight_100;
+      border-bottom: 2px solid $highlight_100;
+      background: linear-gradient(
+        90deg,
+        $game-gradient-from 0%,
+        $game-gradient-to 100%
+        );
+    }
+
+    > #gradient-left {
+      left: 0;
+    }
+
+    > #gradient-right {
+      right: 0;
+      transform: rotate(180deg);
     }
   }
 }
@@ -74,120 +106,80 @@
       }
     }
   }
-}
 
-@media only screen and (max-width: $tablet-max-width) {
-  #game {
-    position: relative;
+  @include tablet-size {
+    width: 100%;
+    height: 75%;
+    max-height: 75%;
+    grid-auto-flow: column;
+    grid-template-columns: repeat(auto-fill, 5.6em);
+    grid-auto-columns: 5.6em;
+    grid-template-rows: repeat(3, 1fr);
+    justify-items: stretch;
 
-    > #title {
-      position: relative;
-      z-index: 1;
-    }
+    font-size: 2rem;
 
-    > #moves {
-      width: 100%;
-      height: 75%;
-      max-height: 75%;
-      grid-auto-flow: column;
-      grid-template-columns: repeat(auto-fill, 5.6em);
-      grid-auto-columns: 5.6em;
-      grid-template-rows: repeat(3, 1fr);
-      justify-items: stretch;
+    padding: 0;
+    border-bottom: 2px solid $highlight_100;
 
-      font-size: 2rem;
+    > div {
+      text-align: center !important;
 
-      padding: 0;
-      border-bottom: 2px solid $highlight_100;
-
-      > div {
-        text-align: center !important;
-
-        > .comment-small {
-          width: 0.9em;
-        }
-
-        &:nth-child(3n+2) .comment-small {
-          left: 0.2em;
-        }
-
-        &:nth-child(3n) .comment-small {
-          right: 0.2em;
-        }
+      > .comment-small {
+        width: 0.9em;
       }
-    }
 
-    // mobile gradients
-    > #gradient-left, #gradient-right {
-      position: absolute;
-      z-index: 0;
+      &:nth-child(3n+2) .comment-small {
+        left: 0.2em;
+      }
 
-      height: 100%;
-      width: 48px;
-      top: 0;
-
-      border-top: 2px solid $highlight_100;
-      border-bottom: 2px solid $highlight_100;
-      background: linear-gradient(
-        90deg,
-        $game-gradient-from 0%,
-        $game-gradient-to 100%
-        );
-    }
-
-    > #gradient-left {
-      left: 0;
-    }
-
-    > #gradient-right {
-      right: 0;
-      transform: rotate(180deg);
+      &:nth-child(3n) .comment-small {
+        right: 0.2em;
+      }
     }
   }
 }
 
 // --- selected move in game ---
-#game > #moves > .sel-row {
-  background-color: $highlight_40;
-  border-bottom: 1px solid $highlight_100;
-  border-top: 1px solid $highlight_100;
-
-  > span {
-    position: relative;
-    z-index: 1;
-  }
-
-  > #sel-move {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    z-index: 0;
-  }
-}
-
 #game > #moves {
+  > .sel-row {
+    background-color: $highlight_40;
+    border-bottom: 1px solid $highlight_100;
+    border-top: 1px solid $highlight_100;
+
+    > span {
+      position: relative;
+      z-index: 1;
+    }
+
+    > #sel-move {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      z-index: 0;
+    }
+
+    @include tablet-size {
+      border-bottom: none;
+      border-top: none;
+      border-left: 1px solid $highlight_100;
+      border-right: 1px solid $highlight_100;
+
+      > #sel-move {
+        right: 50% !important;
+        max-width: 6.4em;
+        max-height: 1.6em;
+        object-fit: fill;
+        transform: translateX(50%) translateY(-50%) scale(1.35, 1);
+      }
+    }
+  }
+
   > div:nth-child(3n+2) #sel-move {
     right: 0.3em;
   }
 
   > div:nth-child(3n) #sel-move {
     left: 0.3em;
-  }
-}
-
-@media only screen and (max-width: $tablet-max-width) {
-  #game > #moves > .sel-row {
-    border-bottom: none;
-    border-top: none;
-    border-left: 1px solid $highlight_100;
-    border-right: 1px solid $highlight_100;
-
-    > #sel-move {
-      right: 50% !important;
-      max-width: 6.4em;
-      max-height: 1.6em;
-      object-fit: fill;
-      transform: translateX(50%) translateY(-50%) scale(1.35, 1);
-    }
   }
 }
