--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -18,8 +18,8 @@ $background: #D2D2D2;
 $highlight_100: #57B5FF;
 $highlight_60: mix($highlight_100, white, 60%);
 $highlight_40: mix($highlight_100, white, 40%);
-$field_light: #B58863;
-$field_dark: #F0D9B5;
+$field_dark: #B58863;
+$field_light: #F0D9B5;
 $shadow: rgba(0, 0, 0, 0.25);
 $game-gradient-from: rgba(120, 120, 120, 1);
 $game-gradient-to: rgba(255,255,255,0);
