--- a/sass/_game.scss
+++ b/sass/_game.scss
@@ -77,7 +77,7 @@
   line-height: 1.5;
   padding-top: 0.6em;
 
-  > div {
+  > .move-number, .move-white, .move-black {
     position: relative;
     text-align: right;
     padding: 0 0.5em;
@@ -87,23 +87,23 @@
       top: 50%;
       transform: translateY(-45%);
     }
+  }
 
-    &:nth-child(3n+1) {
-      padding: 0;
+  > .move-number {
+    padding: 0;
+  }
+
+  > .move-white {
+    .comment-small {
+      left: 0.7em;
     }
+  }
 
-    &:nth-child(3n+2) {
-      .comment-small {
-        left: 0.7em;
-      }
-    }
+  > .move-black {
+    text-align: left;
 
-    &:nth-child(3n) {
-      text-align: left;
-
-      .comment-small {
-        right: 0.7em;
-      }
+    .comment-small {
+      right: 0.7em;
     }
   }
 
@@ -122,20 +122,20 @@
     padding: 0;
     border-bottom: 2px solid $highlight_100;
 
-    > div {
+    > .move-number, .move-white, .move-black {
       text-align: center !important;
 
       > .comment-small {
         width: 0.9em;
       }
+    }
 
-      &:nth-child(3n+2) .comment-small {
-        left: 0.2em;
-      }
+    > .move-white .comment-small {
+      left: 0.2em;
+    }
 
-      &:nth-child(3n) .comment-small {
-        right: 0.2em;
-      }
+    > .move-black .comment-small {
+      right: 0.2em;
     }
   }
 }
@@ -175,11 +175,11 @@
     }
   }
 
-  > div:nth-child(3n+2) #sel-move {
+  .move-white #sel-move {
     right: 0.3em;
   }
 
-  > div:nth-child(3n) #sel-move {
+  .move-black #sel-move {
     left: 0.3em;
   }
 }
