--- a/sass/_board.scss
+++ b/sass/_board.scss
@@ -5,19 +5,11 @@
   grid-template-columns: repeat(8, 1fr);
   grid-template-rows: repeat(8, 1fr);
 
+  aspect-ratio: 1/1;
+  max-height: 100%;
+
   //margin: auto;
   padding: 3.2rem;
-
-  @include device("medium") {
-    /* TODO: vw -> % */
-    width: min(100vw, calc(100vh 
-      - $tablet-header-height 
-      - $tablet-game-height
-      - $tablet-comment-height
-      - $tablet-grid-gaps * 3
-    ));
-    margin: 0 auto;
-  }
 
   > .field {
       position: relative;
