--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,5 +1,6 @@
 // definition: sizes for desktop version
 $desktop-header-height: 50px;
+$desktop-game-width: 300px;
 $desktop-game-title-height: 106px;
 $desktop-comment-height: 135px;
 $desktop-grid-gaps: 15px;
