tablet variables renamed to medium

--- a/sass/_game.scss
+++ b/sass/_game.scss
@@ -6,7 +6,7 @@
 
   @include device("medium") {
     position: relative;
-    height: $tablet-game-height;
+    height: $medium-game-height;
   }
 
   > #title {
