--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -8,20 +8,20 @@ $desktop-grid-gaps: 15px;
 $desktop-fixed-height: $desktop-header-height + 2*$desktop-grid-gaps;
 
 // definitions: sizes for tablet version
-$tablet-header-height: 40px;
-$tablet-game-height: 120px;
-$tablet-min-comment-height: 145px;
-$tablet-grid-gaps: 10px;
+$medium-header-height: 40px;
+$medium-game-height: 120px;
+$medium-min-comment-height: 145px;
+$medium-grid-gaps: 10px;
 // calculate middle line between comment and board
-$tablet-max-board-height: calc(100% 
-  - $tablet-header-height
-  - $tablet-game-height
-  - $tablet-grid-gaps*3
-  - $tablet-min-comment-height);
-$tablet-max-comment-height: calc(100%
-  - $tablet-header-height
-  - $tablet-game-height
-  - $tablet-grid-gaps*3
+$medium-max-board-height: calc(100% 
+  - $medium-header-height
+  - $medium-game-height
+  - $medium-grid-gaps*3
+  - $medium-min-comment-height);
+$medium-max-comment-height: calc(100%
+  - $medium-header-height
+  - $medium-game-height
+  - $medium-grid-gaps*3
   - 100vw);
 
 // colors
