--- a/sass/_board.scss
+++ b/sass/_board.scss
@@ -4,62 +4,54 @@
   display: grid;
   grid-template-columns: repeat(8, 1fr);
   grid-template-rows: repeat(8, 1fr);
+  justify-self: center;
 
   aspect-ratio: 1/1;
-  max-height: 100%;
+  height: 100%;
 
-  //margin: auto;
   padding: 3.2rem;
 
   > .field {
+      display: flex;
       position: relative;
-      display: block;
-      padding: 50% 0;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100%;
 
-    > div {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+    > img {
+        width: 95%;
+        height: 95%;
+    }
+
+    > .over, .under, .left, .right {
         position: absolute;
+        margin: 0;
+        font-size: 3rem;
+        line-height: 1;
+        color: white;
+
+        text-shadow: 1px 1px 2px $shadow;
+    }
+
+    > .over {
         top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
+        transform: translateY(-100%);
+    }
 
-      > img {
-          width: 95%;
-          height: 95%;
-      }
+    > .under {
+        bottom: 0;
+        transform: translateY(100%);
+    }
 
-      > .over, .under, .left, .right {
-          position: absolute;
-          margin: 0;
-          font-size: 3rem;
-          line-height: 1;
-          color: white;
+    > .left {
+        left: -3px;
+        transform: translateX(-100%);
+    }
 
-          text-shadow: 1px 1px 2px $shadow;
-      }
-
-      > .over {
-          top: 0;
-          transform: translateY(-100%);
-      }
-
-      > .under {
-          bottom: 0;
-          transform: translateY(100%);
-      }
-
-      > .left {
-          left: -3px;
-          transform: translateX(-100%);
-      }
-
-      > .right {
-          right: -3px;
-          transform: translateX(100%);
-      }
+    > .right {
+        right: -3px;
+        transform: translateX(100%);
     }
   }
 
