imported normalized.css and sanitized.css

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,5 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Questrial:400');
-@import url('https://fonts.googleapis.com/css?family=Tinos:400,700');
+//vendor
+@import 'normalize';
+@import 'sanitize';
 
 //utilities
 @import 'variables';
