--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,3 +1,7 @@
+// fonts
+@import url('https://fonts.googleapis.com/css?family=Questrial:400');
+@import url('https://fonts.googleapis.com/css?family=Tinos:400,700');
+
 * {
   box-sizing: border-box;
 }
