--- a/sass/_board.scss
+++ b/sass/_board.scss
@@ -18,10 +18,39 @@
       align-items: center;
       width: 100%;
       height: 100%;
+      z-index: 0;
 
     > img {
-        width: 95%;
-        height: 95%;
+      position: absolute;
+      width: 95%;
+      height: 95%;
+      z-index: 1;
+    }
+
+    > .move-option {
+      position: absolute;
+      width: 50%;
+      height: 50%;
+      z-index: 2;
+
+      > circle {
+        fill: $highlight_100;
+        opacity: 0.7;
+      }
+    }
+
+    > .sel-piece {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      z-index: 0;
+
+      > rect {
+        width: 35%;
+        height: 35%;
+        fill: $highlight_100;
+        opacity: 0.7;
+      }
     }
 
     > .over, .under, .left, .right {
