--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,6 +1,34 @@
 // fonts
-@import url('https://fonts.googleapis.com/css?family=Questrial:400');
-@import url('https://fonts.googleapis.com/css?family=Tinos:400,700');
+@font-face {
+  font-family: 'Questrial';
+  src: url('../fonts/Questrial-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Tinos';
+  src: url('../fonts/Tinos-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Tinos';
+  src: url('../fonts/Tinos-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Tinos';
+  src: url('../fonts/Tinos-Italic.ttf') format('truetype');
+  font-weight: 400;
+  font-style: italic;
+}
+@font-face {
+  font-family: 'Tinos';
+  src: url('../fonts/Tinos-BoldItalic.ttf') format('truetype');
+  font-weight: 700;
+  font-style: italic;
+}
 
 * {
   box-sizing: border-box;
